# surrealdb-client

./: Cargo.toml  README.MD  run-docker.sh
examples/: custom_query.rs  insert.rs  select.rs  sign_in.rs  update.rs
src/: lib.rs  surreal.rs
src/common_tests/datamodel/: company.rs  employee.rs
src/common_tests/fixtures/: globals.rs  message_router.rs  mod.rs  singleton_driver.rs
src/common_tests/fixtures/channels/: oneshot.rs
src/connection/: frame_connection.rs  surreal_connection.rs  surreal_ws_conn.rs
src/connection/error/: mod.rs
src/connection/model/: method.rs  result.rs  rpcrequest.rs  rpcresponse.rs  surrealresult.rs
src/driver/: surreal_driver.rs
src/router/: message.rs  message_router.rs  msg_router_handle.rs  msg_router_manager.rs
src/structs/: emitter.rs
src/types/: authentication.rs  errors.rs
tests/: msg_router_manager_test.rs  surreal_driver_test.rs  surreal_ws_conn_test.rs
tests/common/: fixture.rs  mod.rs
tests/common/datamodel/: company.rs  employee.rs  mod.rs
