[package]
name = "surrealdb-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
anyhow = "1.0.66"
bigdecimal = { version = "0.3.0", features = ["serde", "string-only"] }
bytes = "1"
chrono = { version = "0.4.22", features = ["serde"] }
futures = "0.3.24"
futures-util = "0.3.24"
http = "0.2.8"
nom = "7.1.1"
once_cell = "1.16.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.85"
serde_pack = { version = "1.1.1", package = "rmp-serde" }
surrealdb = { git = "https://github.com/surrealdb/surrealdb" }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"]}
tungstenite = { version = "0.17.3", features = ["native-tls"]}
url = "2.3.1"
uuid = { version = "1.2.1", features = ["serde", "v4", "v7"] }