[package]
name = "surrealdb-client"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
futures = "0.3.24"
futures-util = "0.3.24"
mockall = "0.11.3"
once_cell = "1.16.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.85"
serde_pack = { version = "1.1.1", package = "rmp-serde" }
surrealdb = { git = "https://github.com/surrealdb/surrealdb" }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"]}
tungstenite = { version = "0.17.3", features = ["native-tls"]}
url = "2.3.1"
uuid = { version = "1.2.1", features = ["serde", "v4", "v7"] }
