[package]
name = "surrealdb-client"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
futures = "0.3.28"
futures-util = "0.3.28"
once_cell = "1.18.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.107"
serde_pack = { version = "1.1.2", package = "rmp-serde" }
surrealdb = { git = "https://github.com/surrealdb/surrealdb" }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"]}
tungstenite = { version = "0.20.1", features = ["native-tls"]}
url = "2.4.1"
uuid = { version = "1.4.1", features = ["serde", "v4", "v7"] }